@@ -105,7 +105,7 @@
 #error "eek! DBVER can't handle minor versions > 9"
 #endif
 
-#define PY_BSDDB_VERSION "4.7.5devel12"
+#define PY_BSDDB_VERSION "4.7.5devel13"
 
 /* Python object definitions */
 
