@@ -17,7 +17,9 @@
   * Add support for "DB_REP_PERMANENT", "DB_REP_CONF_NOAUTOINIT",
     "DB_REP_CONF_DELAYCLIENT", "DB_REP_CONF_BULK",
     "DB_REP_CONF_NOWAIT", "DB_REP_LEASE_EXPIRED",
-    "DB_REP_CONF_LEASE" and "DB_REPMGR_CONF_2SITE_STRICT" flags.
+    "DB_REP_CONF_LEASE" and "DB_REPMGR_CONF_2SITE_STRICT",
+    "DB_REP_ANYWHERE", "DB_REP_NOBUFFER" and "DB_REP_REREQUEST"
+    flags.
 
 4.7.4:
   * Under Python 3.0, "bsddb.db.DB_VERSION_STRING",
